[package]
name = "xbitwise"
version = "0.1.0"
authors = ["Luis Miguel Báez <es.luismiguelbaez@gmail.com>"]
edition = "2018"
keywords = ["bitwise", "integer"]
license = "MIT"
repository = "https://github.com/LuisMBaezCo/xbitwise"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "xbitwise"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]