[package]
name = "xbitwise"
version = "0.1.0"
description = "A Rust library that extends the basic functionality of bitwise operations"
authors = ["Luis Miguel Báez <es.luismiguelbaez@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["bitwise", "integer"]
categories = ["bitwise"]
repository = "https://github.com/LuisMBaezCo/xbitwise"
rust-version = "1.31.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["*.md"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]

[features]
default = ["signed", "unsigned"]
signed = ["i8", "i16", "i32", "i64", "i128"]
unsigned = ["u8", "u16", "u32", "u64", "u128"]
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
u8 = []
u16 = []
u32 = []
u64 = []
u128 = []

[lib]
name = "xbitwise"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]